# GEMBA

./: .gitignore  README.md  evaluate.py  gemba_mqm.py  main.py  pyproject.toml  requirements.txt
gemba/: CREDENTIALS.py  __init__.py  __main__.py  cache.py  cli.py  gemba_da.py  gemba_esa.py  gemba_mqm_utils.py  gpt_api.py  mtme_tools.py  prompt.py  scores.py  testset.py  utils.py
gemba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mt-metrics-eval-v2/wmt22/metric-scores/en-de/: GEMBA-Bab-Classes-refA.seg.score  GEMBA-Bab-Classes-refA.sys.score  GEMBA-Bab-Classes-src.seg.score  GEMBA-Bab-Classes-src.sys.score  GEMBA-Bab-DA-refA.seg.score  GEMBA-Bab-DA-refA.sys.score  GEMBA-Bab-DA-src.seg.score  GEMBA-Bab-DA-src.sys.score  GEMBA-Bab-SQM-refA.seg.score  GEMBA-Bab-SQM-refA.sys.score  GEMBA-Bab-SQM-src.seg.score  GEMBA-Bab-SQM-src.sys.score  GEMBA-Bab-Stars-refA.seg.score  GEMBA-Bab-Stars-refA.sys.score  GEMBA-Bab-Stars-src.seg.score  GEMBA-Bab-Stars-src.sys.score  GEMBA-Chat-Classes-refA.seg.score  GEMBA-Chat-Classes-refA.sys.score  GEMBA-Chat-Classes-src.seg.score  GEMBA-Chat-Classes-src.sys.score  GEMBA-Chat-DA-refA.seg.score  GEMBA-Chat-DA-refA.sys.score  GEMBA-Chat-DA-src.seg.score  GEMBA-Chat-DA-src.sys.score  GEMBA-Chat-SQM-refA.seg.score  GEMBA-Chat-SQM-refA.sys.score  GEMBA-Chat-SQM-src.seg.score  GEMBA-Chat-SQM-src.sys.score  GEMBA-Chat-Stars-refA.seg.score  GEMBA-Chat-Stars-refA.sys.score  GEMBA-Chat-Stars-src.seg.score  GEMBA-Chat-Stars-src.sys.score  GEMBA-Curie-Classes-refA.seg.score  GEMBA-Curie-Classes-refA.sys.score  (+78 more)
(+224 files in other folders)
